# market-digest

./: .env.example  .gitignore  CLAUDE.md  config.yaml  pyproject.toml
.cache/: sec_tickers.json
.playwright-mcp/: page-2026-04-21T14-09-29-625Z.yml
deploy/: Caddyfile.example  README.md  market-digest-web.service.example
docs/superpowers/plans/: 2026-04-19-web-digest.md  2026-04-20-analyst-enrichment.md  2026-04-20-dynamic-site.md  2026-04-21-readability-redesign.md
docs/superpowers/specs/: 2026-04-19-web-digest-design.md  2026-04-20-analyst-enrichment-research-design.md  2026-04-20-dynamic-site-research-trigger-design.md  2026-04-21-readability-redesign-design.md
market_digest/: enrich.py  models.py  pdf_text.py  research.py  run.py  summarize.py  telegram.py
market_digest/fetchers/: fmp.py  hankyung.py  sec_edgar.py  yfinance_recs.py
market_digest/web/: __init__.py  app.py  builder.py  charts.py  data.py  direction.py  jobs.py  naver.py
market_digest/web/assets/: base.js  chart.js  research.js  search.js  style.css
market_digest/web/templates/: base.html.j2  card_page.html.j2  detail_page.html.j2  research_page.html.j2  search.html.j2
tests/: test_enrich.py  test_fmp.py  test_hankyung.py  test_research_cli.py  test_run_validate.py
tests/fixtures/: hankyung_list.html
tests/web/: test_app.py  test_build.py  test_charts.py  test_collect.py  test_data.py  test_direction.py  test_index.py  test_jobs.py  test_models.py  test_naver.py  test_render.py  test_research_render.py
