[project]
name = "market-digest"
version = "0.1.0"
description = "Daily market report fetcher + summarizer agent"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["market_digest"]
